--- a/Index/哈希表.md
+++ b/Index/哈希表.md
@@ -1,5 +1,9 @@
 | 题目                                                                                                         | 题解                                                                                                                                                                      | 难度 | 推荐指数   |
 | ------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---- | ---------- |
-| [1. 两数之和](https://leetcode-cn.com/problems/two-sum/)                                                     | [【宫水三叶】朴素解法 + 哈希表解法](https://leetcode-cn.com/problems/two-sum/solution/po-su-jie-fa-ha-xi-biao-jie-fa-by-ac_oie-yf7o/)                                     | 简单 | 🤩🤩🤩🤩🤩 |
-| [2. 两数相加](https://leetcode-cn.com/problems/add-two-numbers/)                                             | [朴素解法（哨兵技巧）](https://leetcode-cn.com/problems/add-two-numbers/solution/po-su-jie-fa-shao-bing-ji-qiao-by-ac_oie-etln/)                                          | 中等 | 🤩🤩🤩🤩🤩 |
-| [3. 无重复字符的最长子串 ](https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/) | [【刷穿 LC】双指针 + 哈希表解法](https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/solution/shua-chuan-lc-shuang-zhi-zhen-ha-xi-biao-q08m/) | 中等 | 🤩🤩🤩🤩🤩 |
+| [1. 两数之和](https://leetcode-cn.com/problems/two-sum/)                                                     | [LeetCode 题解链接](https://leetcode-cn.com/problems/two-sum/solution/po-su-jie-fa-ha-xi-biao-jie-fa-by-ac_oie-yf7o/)                        | 简单 | 🤩🤩🤩🤩🤩 |
+| [2. 两数相加](https://leetcode-cn.com/problems/add-two-numbers/)                                             | [LeetCode 题解链接](https://leetcode-cn.com/problems/add-two-numbers/solution/po-su-jie-fa-shao-bing-ji-qiao-by-ac_oie-etln/)                             | 中等 | 🤩🤩🤩🤩🤩 |
+| [3. 无重复字符的最长子串 ](https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/solution/shua-chuan-lc-shuang-zhi-zhen-ha-xi-biao-q08m/) | 中等 | 🤩🤩🤩🤩🤩 |
+| [13. 罗马数字转整数](https://leetcode-cn.com/problems/roman-to-integer/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/roman-to-integer/solution/shua-chuan-lc-ha-xi-biao-by-ac_oier-mooy/) | 简单 | 🤩🤩 |
+| [30. 串联所有单词的子串](https://leetcode-cn.com/problems/substring-with-concatenation-of-all-words/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/substring-with-concatenation-of-all-words/solution/shua-chuan-lc-po-su-ha-xi-biao-jie-fa-hu-ml3x/) | 困难 | 🤩🤩 |
+| [36. 有效的数独](https://leetcode-cn.com/problems/valid-sudoku/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/valid-sudoku/solution/ha-xi-biao-jie-fa-shu-zu-jie-fa-by-ac_oi-feac/) | 中等 | 🤩🤩🤩🤩 |
+
