--- a/Index/回文串问题.md
+++ b/Index/回文串问题.md
@@ -1,4 +1,5 @@
 | 题目                                                                               | 题解                                                                                                                                                                      | 难度 | 推荐指数   |
 | ---------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---- | ---------- |
-| [5. 最长回文子串](https://leetcode-cn.com/problems/longest-palindromic-substring/) | [【必背模板】回文串问题的究极答案：Manacher 算法](https://leetcode-cn.com/problems/longest-palindromic-substring/solution/shua-chuan-lc-po-su-jie-fa-manacher-suan-i2px/) | 中等 | 🤩🤩🤩🤩🤩 |
-| [9. 回文数 ](https://leetcode-cn.com/problems/palindrome-number/)                  | [【刷穿 LC】字符串/非字符串 (完全翻转&部分翻转)](https://leetcode-cn.com/problems/palindrome-number/solution/shua-chuan-lc-zi-fu-chuan-fei-zi-fu-chua-e8l0/)              | 简单 | 🤩🤩🤩🤩   |
+| [5. 最长回文子串](https://leetcode-cn.com/problems/longest-palindromic-substring/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/longest-palindromic-substring/solution/shua-chuan-lc-po-su-jie-fa-manacher-suan-i2px/) | 中等 | 🤩🤩🤩🤩🤩 |
+| [9. 回文数 ](https://leetcode-cn.com/problems/palindrome-number/)                  | [LeetCode 题解链接](https://leetcode-cn.com/problems/palindrome-number/solution/shua-chuan-lc-zi-fu-chuan-fei-zi-fu-chua-e8l0/) | 简单 | 🤩🤩🤩🤩   |
+
