--- a/Index/数学.md
+++ b/Index/数学.md
@@ -1,6 +1,9 @@
 | 题目                                                                  | 题解                                                                                                                                                         | 难度 | 推荐指数   |
 | --------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------ | ---- | ---------- |
-| [2. 两数相加](https://leetcode-cn.com/problems/add-two-numbers/)      | [朴素解法（哨兵技巧）](https://leetcode-cn.com/problems/add-two-numbers/solution/po-su-jie-fa-shao-bing-ji-qiao-by-ac_oie-etln/)                             | 中等 | 🤩🤩🤩🤩🤩 |
-| [6. Z 字形变换 ](https://leetcode-cn.com/problems/zigzag-conversion/) | [【刷穿 LC】直观规律解法 + 数学规律解法](https://leetcode-cn.com/problems/zigzag-conversion/solution/shua-chuan-lc-zhi-guan-gui-lu-jie-fa-shu-8226/)         | 中等 | 🤩🤩🤩     |
-| [7. 整数反转 ](https://leetcode-cn.com/problems/reverse-integer/)     | [【刷穿 LC】不完美解法 + 完美解法](https://leetcode-cn.com/problems/reverse-integer/solution/shua-chuan-lc-bu-wan-mei-jie-fa-wan-mei-919rd/)                 | 简单 | 🤩🤩🤩     |
-| [9. 回文数 ](https://leetcode-cn.com/problems/palindrome-number/)     | [【刷穿 LC】字符串/非字符串 (完全翻转&部分翻转)](https://leetcode-cn.com/problems/palindrome-number/solution/shua-chuan-lc-zi-fu-chuan-fei-zi-fu-chua-e8l0/) | 简单 | 🤩🤩🤩🤩   |
+| [2. 两数相加](https://leetcode-cn.com/problems/add-two-numbers/)      | [LeetCode 题解链接](https://leetcode-cn.com/problems/add-two-numbers/solution/po-su-jie-fa-shao-bing-ji-qiao-by-ac_oie-etln/)                | 中等 | 🤩🤩🤩🤩🤩 |
+| [6. Z 字形变换 ](https://leetcode-cn.com/problems/zigzag-conversion/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/zigzag-conversion/solution/shua-chuan-lc-zhi-guan-gui-lu-jie-fa-shu-8226/) | 中等 | 🤩🤩🤩     |
+| [7. 整数反转 ](https://leetcode-cn.com/problems/reverse-integer/)     | [LeetCode 题解链接](https://leetcode-cn.com/problems/reverse-integer/solution/shua-chuan-lc-bu-wan-mei-jie-fa-wan-mei-919rd/)    | 简单 | 🤩🤩🤩     |
+| [9. 回文数 ](https://leetcode-cn.com/problems/palindrome-number/)     | [LeetCode 题解链接](https://leetcode-cn.com/problems/palindrome-number/solution/shua-chuan-lc-zi-fu-chuan-fei-zi-fu-chua-e8l0/) | 简单 | 🤩🤩🤩🤩   |
+| [29. 两数相除](https://leetcode-cn.com/problems/divide-two-integers/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/divide-two-integers/solution/shua-chuan-lc-er-fen-bei-zeng-cheng-fa-j-m73b) | 中等 | 🤩🤩🤩 |
+| [31. 下一个排列](https://leetcode-cn.com/problems/next-permutation/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/next-permutation/solution/miao-dong-xi-lie-100-cong-xia-yi-ge-pai-gog8j/) | 中等 | 🤩🤩🤩 |
+
