--- a/Index/链表.md
+++ b/Index/链表.md
@@ -1,3 +1,9 @@
 | 题目                                                             | 题解                                                                                                                             | 难度 | 推荐指数 |
 | ---------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------- | ---- | -------- |
-| [2. 两数相加](https://leetcode-cn.com/problems/add-two-numbers/) | [朴素解法（哨兵技巧）](https://leetcode-cn.com/problems/add-two-numbers/solution/po-su-jie-fa-shao-bing-ji-qiao-by-ac_oie-etln/) | 中等 | 🤩🤩🤩🤩🤩   |
+| [2. 两数相加](https://leetcode-cn.com/problems/add-two-numbers/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/add-two-numbers/solution/po-su-jie-fa-shao-bing-ji-qiao-by-ac_oie-etln/) | 中等 | 🤩🤩🤩   |
+| [19. 删除链表的倒数第 N 个结点](https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/solution/shua-chuan-lc-lian-biao-kuai-man-zhi-zhe-1gs1/) | 中等 | 🤩🤩🤩🤩🤩 |
+| [21. 合并两个有序链表](https://leetcode-cn.com/problems/merge-two-sorted-lists/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/merge-two-sorted-lists/solution/shua-chuan-lc-shuang-zhi-zhen-jie-fa-sha-b22z/) | 简单 | 🤩🤩🤩🤩🤩 |
+| [23. 合并K个升序链表](https://leetcode-cn.com/problems/merge-k-sorted-lists/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/merge-k-sorted-lists/solution/shua-chuan-lc-you-xian-dui-lie-jie-fa-sh-3flb/) | 困难 | 🤩🤩🤩 |
+| [24. 两两交换链表中的节点](https://leetcode-cn.com/problems/swap-nodes-in-pairs/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/swap-nodes-in-pairs/solution/shua-chuan-lc-di-gui-die-dai-jie-fa-shao-70t3/) | 中等 | 🤩🤩🤩🤩 |
+| [25. K 个一组翻转链表](https://leetcode-cn.com/problems/reverse-nodes-in-k-group/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/reverse-nodes-in-k-group/solution/shua-chuan-lc-duo-tu-jiang-jie-di-gui-gu-6wr0/) | 困难 | 🤩🤩 |
+
