--- a/LeetCode/1-10/10. 正则表达式匹配（困难）.md
+++ b/LeetCode/1-10/10. 正则表达式匹配（困难）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[10. 正则表达式匹配](https://leetcode-cn.com/problems/regular-expression-matching/solution/shua-chuan-lc-dong-tai-gui-hua-jie-fa-by-zn9w/)** ，难度为 **困难**。
 
-Tag : 「动态规划」
+Tag : 「动态规划」、「线性 DP」
 
 
 
