--- a/Index/双指针.md
+++ b/Index/双指针.md
@@ -1,3 +1,11 @@
 | 题目                                                                                                         | 题解                                                                                                                                                                      | 难度 | 推荐指数   |
 | ------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---- | ---------- |
-| [3. 无重复字符的最长子串 ](https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/) | [【刷穿 LC】双指针 + 哈希表解法](https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/solution/shua-chuan-lc-shuang-zhi-zhen-ha-xi-biao-q08m/) | 中等 | 🤩🤩🤩🤩🤩 |
+| [3. 无重复字符的最长子串 ](https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/solution/shua-chuan-lc-shuang-zhi-zhen-ha-xi-biao-q08m/) | 中等 | 🤩🤩🤩🤩🤩 |
+| [11. 盛最多水的容器 ](https://leetcode-cn.com/problems/container-with-most-water/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/longest-substring-without-repeating-characters/) | 中等 | 🤩🤩🤩🤩🤩 |
+| [15. 三数之和](https://leetcode-cn.com/problems/3sum/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/3sum/solution/shua-chuan-lc-pai-xu-shuang-zhi-zhen-jie-cd8r/) | 中等 | 🤩🤩🤩🤩🤩 |
+| [16. 最接近的三数之和](https://leetcode-cn.com/problems/3sum-closest/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/3sum-closest/solution/shua-chuan-lc-pai-xu-shuang-zhi-zhen-jie-p2ou/) | 中等 | 🤩🤩🤩🤩 |
+| [18. 四数之和](https://leetcode-cn.com/problems/4sum/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/4sum/solution/shua-chuan-lc-pai-xu-shuang-zhi-zhen-jie-dqx7/) | 中等 | 🤩🤩🤩🤩 |
+| [19. 删除链表的倒数第 N 个结点](https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/solution/shua-chuan-lc-lian-biao-kuai-man-zhi-zhe-1gs1/) | 中等 | 🤩🤩🤩🤩🤩 |
+| [26. 删除有序数组中的重复项](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/remove-duplicates-from-sorted-array/solution/shua-chuan-lc-jian-ji-shuang-zhi-zhen-ji-2eg8) | 简单 | 🤩🤩🤩🤩 |
+| [27. 移除元素](https://leetcode-cn.com/problems/remove-element/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/remove-element/solution/shua-chuan-lc-shuang-bai-shuang-zhi-zhen-mzt8/) | 简单 | 🤩🤩🤩🤩 |
+
