--- a/Index/模拟.md
+++ b/Index/模拟.md
@@ -1,8 +1,14 @@
 | 题目                                                                                 | 题解                                                                                                                                                                      | 难度 | 推荐指数   |
 | ------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---- | ---------- |
-| [1. 两数之和](https://leetcode-cn.com/problems/two-sum/)                             | [【宫水三叶】朴素解法 + 哈希表解法](https://leetcode-cn.com/problems/two-sum/solution/po-su-jie-fa-ha-xi-biao-jie-fa-by-ac_oie-yf7o/)                                     | 简单 | 🤩🤩🤩🤩🤩 |
-| [2. 两数相加](https://leetcode-cn.com/problems/add-two-numbers/)                     | [朴素解法（哨兵技巧）](https://leetcode-cn.com/problems/add-two-numbers/solution/po-su-jie-fa-shao-bing-ji-qiao-by-ac_oie-etln/)                                          | 中等 | 🤩🤩🤩🤩🤩 |
-| [5. 最长回文子串](https://leetcode-cn.com/problems/longest-palindromic-substring/)   | [【必背模板】回文串问题的究极答案：Manacher 算法](https://leetcode-cn.com/problems/longest-palindromic-substring/solution/shua-chuan-lc-po-su-jie-fa-manacher-suan-i2px/) | 中等 | 🤩🤩🤩🤩🤩 |
-| [6. Z 字形变换 ](https://leetcode-cn.com/problems/zigzag-conversion/)                | [【刷穿 LC】直观规律解法 + 数学规律解法](https://leetcode-cn.com/problems/zigzag-conversion/solution/shua-chuan-lc-zhi-guan-gui-lu-jie-fa-shu-8226/)                      | 中等 | 🤩🤩🤩     |
-| [7. 整数反转 ](https://leetcode-cn.com/problems/reverse-integer/)                    | [【刷穿 LC】不完美解法 + 完美解法](https://leetcode-cn.com/problems/reverse-integer/solution/shua-chuan-lc-bu-wan-mei-jie-fa-wan-mei-919rd/)                              | 简单 | 🤩🤩🤩     |
-| [8. 字符串转换整数 (atoi)](https://leetcode-cn.com/problems/string-to-integer-atoi/) | [【刷穿 LC】简洁解法](https://leetcode-cn.com/problems/string-to-integer-atoi/solution/shua-chuan-lc-jian-ji-jie-fa-by-ac_oier-69tp/)                                     | 中等 | 🤩🤩🤩     |
+| [1. 两数之和](https://leetcode-cn.com/problems/two-sum/)                             | [LeetCode 题解链接](https://leetcode-cn.com/problems/two-sum/solution/po-su-jie-fa-ha-xi-biao-jie-fa-by-ac_oie-yf7o/)                        | 简单 | 🤩🤩🤩🤩🤩 |
+| [2. 两数相加](https://leetcode-cn.com/problems/add-two-numbers/)                     | [LeetCode 题解链接](https://leetcode-cn.com/problems/add-two-numbers/solution/po-su-jie-fa-shao-bing-ji-qiao-by-ac_oie-etln/)                             | 中等 | 🤩🤩🤩🤩🤩 |
+| [5. 最长回文子串](https://leetcode-cn.com/problems/longest-palindromic-substring/)   | [LeetCode 题解链接](https://leetcode-cn.com/problems/longest-palindromic-substring/solution/shua-chuan-lc-po-su-jie-fa-manacher-suan-i2px/) | 中等 | 🤩🤩🤩🤩🤩 |
+| [6. Z 字形变换 ](https://leetcode-cn.com/problems/zigzag-conversion/)                | [LeetCode 题解链接](https://leetcode-cn.com/problems/zigzag-conversion/solution/shua-chuan-lc-zhi-guan-gui-lu-jie-fa-shu-8226/)         | 中等 | 🤩🤩🤩     |
+| [7. 整数反转 ](https://leetcode-cn.com/problems/reverse-integer/)                    | [LeetCode 题解链接](https://leetcode-cn.com/problems/reverse-integer/solution/shua-chuan-lc-bu-wan-mei-jie-fa-wan-mei-919rd/)                 | 简单 | 🤩🤩🤩     |
+| [8. 字符串转换整数 (atoi)](https://leetcode-cn.com/problems/string-to-integer-atoi/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/string-to-integer-atoi/solution/shua-chuan-lc-jian-ji-jie-fa-by-ac_oier-69tp/)                        | 中等 | 🤩🤩🤩     |
+| [12. 整数转罗马数字](https://leetcode-cn.com/problems/integer-to-roman/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/integer-to-roman/solution/shua-chuan-lc-tan-xin-jie-fa-by-ac_oier-5kbw/) | 中等 | 🤩🤩 |
+| [13. 罗马数字转整数](https://leetcode-cn.com/problems/roman-to-integer/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/roman-to-integer/solution/shua-chuan-lc-ha-xi-biao-by-ac_oier-mooy/) | 简单 | 🤩🤩 |
+| [14. 最长公共前缀](https://leetcode-cn.com/problems/longest-common-prefix/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/longest-common-prefix/solution/shua-chuan-lc-die-dai-mo-ni-by-ac_oier-8t4q/) | 简单 | 🤩🤩🤩🤩 |
+| [31. 下一个排列](https://leetcode-cn.com/problems/next-permutation/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/next-permutation/solution/miao-dong-xi-lie-100-cong-xia-yi-ge-pai-gog8j/) | 中等 | 🤩🤩🤩 |
+| [38. 外观数列](https://leetcode-cn.com/problems/count-and-say/) | [LeetCode 题解链接](https://leetcode-cn.com/problems/count-and-say/solution/shua-chuan-lc-100-mo-ni-ti-shi-yong-shao-w8jl/) | 简单 | 🤩🤩 |
+
