✨feat: Update LeetCode 146、1744、231、342、477

--- a/LeetCode/11-20/18. 四数之和（中等）.md
+++ b/LeetCode/11-20/18. 四数之和（中等）.md
@@ -86,7 +86,7 @@ class Solution {
 }
 ```
 * 时间复杂度：`i` 和 `j` 是直接枚举确定，复杂度为 $O(n^2)$，当确定下来 `i` 和 `j` 之后，通过双指针确定 `k` 和 `p` ，也就是对于每一组 `i` 和 `j` 而言复杂度为 $O(n)$。总的复杂度为 $O(n^3)$
-* 空间复杂度：$O(n ^ 2)$
+* 空间复杂度：$O(n)$
 
 ---
 ### 最后
