--- a/LeetCode/1781-1790/1786. 从第一个节点出发到最后一个节点的受限路径数（中等）.md
+++ b/LeetCode/1781-1790/1786. 从第一个节点出发到最后一个节点的受限路径数（中等）.md
@@ -49,7 +49,7 @@ Tag : 「图论最短路」、「线性 DP」
 
 ---
 
-### 堆优化 Dijkstra + 动态规划解法
+### 堆优化 Dijkstra + 动态规划
 
 n 为点的数量，m 为边的数量。
 
@@ -155,7 +155,7 @@ class Solution {
 
 在这个系列文章里面，除了讲解解题思路以外，还会尽可能给出最为简洁的代码。如果涉及通解还会相应的代码模板。
 
-为了方便各位同学能够电脑上进行调试和提交代码，我建立了相关的仓库：https://github.com/SharingSource/LogicStack-LeetCode。
+为了方便各位同学能够电脑上进行调试和提交代码，我建立了相关的仓库：https://github.com/SharingSource/LogicStack-LeetCode 。
 
 在仓库地址里，你可以看到系列文章的题解链接、系列文章的相应代码、LeetCode 原题链接和其他优选题解。
 
