--- a/LeetCode/221-230/227. 基本计算器 II（中等）.md
+++ b/LeetCode/221-230/227. 基本计算器 II（中等）.md
@@ -88,11 +88,8 @@ class Solution {
         put('^', 3);
     }};
     public int calculate(String s) {
-        // 将所有的空格去掉，并将 (- 替换为 (0-，(+ 替换为 (0+
-        // 当然这里也可以不预处理，而是放到循环里面去做判断
+        // 将所有的空格去掉
         s = s.replaceAll(" ", "");
-        s = s.replaceAll("\\(-", "(0-");
-        s = s.replaceAll("\\(\\+", "(0+");
         char[] cs = s.toCharArray();
         int n = s.length();
         // 存放所有的数字
@@ -124,6 +121,9 @@ class Solution {
                     nums.addLast(u);
                     i = j - 1;
                 } else {
+                    if (i > 0 && (cs[i - 1] == '(' || cs[i - 1] == '+' || cs[i - 1] == '-')) {
+                        nums.addLast(0);
+                    }
                     // 有一个新操作要入栈时，先把栈内可以算的都算了 
                     // 只有满足「栈内运算符」比「当前运算符」优先级高/同等，才进行运算
                     while (!ops.isEmpty() && ops.peekLast() != '(') {
