--- a/LeetCode/301-310/301. 删除无效的括号（困难）.md
+++ b/LeetCode/301-310/301. 删除无效的括号（困难）.md
@@ -53,7 +53,7 @@ Tag : 「括号问题」、「回溯算法」、「DFS」
 枚举过程中出现字符分三种情况：
 * 普通字符：无须删除，直接添加
 * 左括号：如果当前得分不超过 `max - 1` 时，我们可以选择添加该左括号，也能选择不添加
-* 右括号：如果当前得大于 0（说明有一个左括号可以与之匹配），我们可以选择添加该右括号，也能选择不添加
+* 右括号：如果当前得分大于 0（说明有一个左括号可以与之匹配），我们可以选择添加该右括号，也能选择不添加
 
 使用 Set 进行方案去重，`len` 记录「爆搜」过程中的最大子串，然后将所有结果集中长度为 `len` 的子串加入答案：
 
