--- a/LeetCode/221-230/224. 基本计算器（困难）.md
+++ b/LeetCode/221-230/224. 基本计算器（困难）.md
@@ -58,11 +58,8 @@ class Solution {
         Deque<Integer> nums = new ArrayDeque<>();
         // 为了防止第一个数为负数，先往 nums 加个 0
         nums.addLast(0);
-        // 将所有的空格去掉，并将 (- 替换为 (0-，(+ 替换为 (0+
-        // 当然这里也可以不预处理，而是放到循环里面去做判断
+        // 将所有的空格去掉
         s = s.replaceAll(" ", "");
-        s = s.replaceAll("\\(-", "(0-");
-        s = s.replaceAll("\\(\\+", "(0+");
         // 存放所有的操作，包括 +/-
         Deque<Character> ops = new ArrayDeque<>();
         int n = s.length();
@@ -91,6 +88,9 @@ class Solution {
                     nums.addLast(u);
                     i = j - 1;
                 } else {
+                    if (i > 0 && (cs[i - 1] == '(' || cs[i - 1] == '+' || cs[i - 1] == '-')) {
+                        nums.addLast(0);
+                    }
                     // 有一个新操作要入栈时，先把栈内可以算的都算了
                     while (!ops.isEmpty() && ops.peekLast() != '(') calc(nums, ops);
                     ops.addLast(c);
@@ -142,8 +142,6 @@ class Solution {
     }};
     public int calculate(String s) {
         s = s.replaceAll(" ", "");
-        s = s.replaceAll("\\(-", "(0-");
-        s = s.replaceAll("\\(\\+", "(0+");
         char[] cs = s.toCharArray();
         int n = s.length();
         Deque<Integer> nums = new ArrayDeque<>();
@@ -170,6 +168,9 @@ class Solution {
                     nums.addLast(u);
                     i = j - 1;
                 } else {
+                    if (i > 0 && (cs[i - 1] == '(' || cs[i - 1] == '+' || cs[i - 1] == '-')) {
+                        nums.addLast(0);
+                    }
                     while (!ops.isEmpty() && ops.peekLast() != '(') {
                         char prev = ops.peekLast();
                         if (map.get(prev) >= map.get(c)) {
