--- a/LeetCode/61-70/65. 有效数字（困难）.md
+++ b/LeetCode/61-70/65. 有效数字（困难）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[65. 有效数字]()** ，难度为 **困难**。
+这是 LeetCode 上的 **[65. 有效数字](https://leetcode-cn.com/problems/valid-number/solution/gong-shui-san-xie-zi-fu-chuan-mo-ni-by-a-7cgc/)** ，难度为 **困难**。
 
 Tag : 「模拟」
 
@@ -70,7 +70,7 @@ Tag : 「模拟」
 
 **「模拟」是在各类场景中最容易实现的方式，只要头脑不发热都能写出来。**
 
-当将字符串按照 `e/E` 进行分割后，其实规则十分简单：
+将字符串以 `e/E` 进行分割后，其实规则十分简单：
 
 * 如果存在 `e/E` ：左侧可以「整数」或「浮点数」，右侧必须是「整数」
 * 如果不存在 `e/E` ：整段可以是「整数」或「浮点数」
