--- a/LeetCode/1231-1240/1239. 串联字符串的最大长度（中等）.md
+++ b/LeetCode/1231-1240/1239. 串联字符串的最大长度（中等）.md
@@ -236,6 +236,8 @@ class Solution {
 
 不难发现，答案与最优前缀序列是一对多关系，这指导我们可以将「参数」调得宽松一些。
 
+**具有「一对多」关系的问题十分适合使用「模拟退火」，使用「模拟退火」可以轻松将本题 `arr.length` 数据范围上升到 $60$ 甚至以上。**
+
 调整成比较宽松的参数可以跑赢「二进制枚举」，但为了以后增加数据不容易被 hack，还是使用 `N=400` & `fa=0.90` 的搭配。
 
 「模拟退火」的几个参数的作用在 [这里](https://leetcode-cn.com/problems/find-minimum-time-to-finish-all-jobs/solution/gong-shui-san-xie-yi-ti-shuang-jie-jian-4epdd/) 说过了，不再赘述。
