✨feat: Add 773 & Modify 752

--- a/LeetCode/751-760/752. 打开转盘锁（中等）.md
+++ b/LeetCode/751-760/752. 打开转盘锁（中等）.md
@@ -60,7 +60,7 @@ Tag : 「双向 BFS」、「启发式搜索」、「AStar 算法」、「IDAStar
 
 「127. 单词接龙」原题链接在 [这里](https://leetcode-cn.com/problems/word-ladder/)，相关题解在 [这里](https://leetcode-cn.com/problems/word-ladder/solution/gong-shui-san-xie-ru-he-shi-yong-shuang-magjd/)。
 
-回到本题，根据题意，可以确定这是一个「最短路」问题。
+回到本题，根据题意，可以确定这是一个「最短路/最小步数」问题。
 
 此类问题，通常我们会使用「BFS」求解，但朴素的 BFS 通常会带来搜索空间爆炸问题。
 
@@ -148,7 +148,7 @@ class Solution {
         Deque<String> d1 = new ArrayDeque<>(), d2 = new ArrayDeque<>();
         /*
          * m1 和 m2 分别记录两个方向出现的状态是经过多少次转换而来
-         * e.g.s
+         * e.g
          * m1 = {"1000":1} 代表 "1000" 由 s="0000" 替换 1 次字符而来
          * m2 = {"9999":3} 代表 "9999" 由 t="9996" 替换 3 次字符而来
          */
