--- a/LeetCode/901-910/909. 蛇梯棋（中等）.md
+++ b/LeetCode/901-910/909. 蛇梯棋（中等）.md
@@ -1,6 +1,6 @@
 ### 题目描述
 
-这是 LeetCode 上的 **[909. 蛇梯棋]()** ，难度为 **中等**。
+这是 LeetCode 上的 **[909. 蛇梯棋](https://leetcode-cn.com/problems/snakes-and-ladders/solution/gong-shui-san-xie-bfs-mo-ni-by-ac_oier-woh6/)** ，难度为 **中等**。
 
 Tag : 「图论 BFS」
 
@@ -9,6 +9,8 @@ Tag : 「图论 BFS」
 $N * N$ 的棋盘 board 上，按从 1 到 $N*N$ 的数字给方格编号，编号 从左下角开始，每一行交替方向。
 
 例如，一块 $6 x 6$ 大小的棋盘，编号如下：
+
+![](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2019/01/31/snakes.png)
 
 r 行 c 列的棋盘，按前述方法编号，棋盘格中可能存在 “蛇” 或 “梯子”；如果 `board[r][c] != -1`，那个蛇或梯子的目的地将会是 `board[r][c]`。
 
