✨feat: Add 168 & Modify 815

--- a/LeetCode/811-820/815. 公交路线（困难）.md
+++ b/LeetCode/811-820/815. 公交路线（困难）.md
@@ -42,7 +42,7 @@ Tag : 「图论 BFS」、「双向 BFS」、「图论搜索」
 
 ### 基本分析
 
-为了方便，我们令每辆公交站为一个「车站」，由一个「车站」可以进入一条或多条「路线」。
+为了方便，我们令每个公交站为一个「车站」，由一个「车站」可以进入一条或多条「路线」。
 
 问题为从「起点车站」到「终点车站」，所进入的最少路线为多少。
 
@@ -200,25 +200,24 @@ class Solution {
 
         // 双向 BFS
         while (!d1.isEmpty() && !d2.isEmpty()) {
-            int t = -1;
+            int res = -1;
             if (d1.size() <= d2.size()) {
-                t = update(d1, m1, m2, t);
+                res = update(d1, m1, m2);
             } else {
-                t = update(d2, m2, m1, s);
+                res = update(d2, m2, m1);
             }
-            if (t != -1) return t;
+            if (res != -1) return res;
         }
 
         return 0x3f3f3f3f; // never
     }
-    int update(Deque<Integer> d, Map<Integer, Integer> cur, Map<Integer, Integer> other, int target) {
+    int update(Deque<Integer> d, Map<Integer, Integer> cur, Map<Integer, Integer> other) {
         // 取出当前所在的路线，与进入该路线所花费的距离
         int poll = d.pollFirst();
         int step = cur.get(poll);
 
         // 遍历该路线所包含的车站
         for (int station : rs[poll]) {
-            if (station == target) return step;
             // 遍历将由该线路的车站发起的路线
             Set<Integer> lines = map.get(station);
             if (lines == null) continue;
