--- a/LeetCode/451-460/451. 根据字符出现频率排序（中等）.md
+++ b/LeetCode/451-460/451. 根据字符出现频率排序（中等）.md
@@ -2,7 +2,7 @@
 
 这是 LeetCode 上的 **[451. 根据字符出现频率排序](https://leetcode-cn.com/problems/sort-characters-by-frequency/solution/gong-shui-san-xie-shu-ju-jie-gou-yun-yon-gst9/)** ，难度为 **中等**。
 
-Tag : 「模拟」、「桶排序」、「哈希表」、「数组」
+Tag : 「模拟」、「桶排序」、「哈希表」、「数组」、「优先队列（堆）」
 
 
 
