--- a/LeetCode/451-460/451. 根据字符出现频率排序（中等）.md
+++ b/LeetCode/451-460/451. 根据字符出现频率排序（中等）.md
@@ -95,7 +95,7 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：使用「哈希表」统计词频的复杂度为 $O(n)$；最坏情况下每个字符出现一次，最多有 $n$ 个节点要添加到「优先队列（堆）」中，复杂度为 $O(n\log{n})$；构造答案需要从「优先队列（堆）」中取出元素，复杂度为 $O(n\log{n})$。整体复杂度为 $O(n\log{n})$
+* 时间复杂度：令字符集的大小为 $C$。使用「哈希表」统计词频的复杂度为 $O(n)$；最坏情况下字符集中的所有字符都有出现，最多有 $C$ 个节点要添加到「优先队列（堆）」中，复杂度为 $O(C\log{C})$；构造答案需要从「优先队列（堆）」中取出元素并拼接，复杂度为 $O(n)$。整体复杂度为 $O(\max(n, C\log{C}))$
 * 空间复杂度：$O(n)$
 
 ---
@@ -130,8 +130,8 @@ class Solution {
     }
 }
 ```
-* 时间复杂度：$O(n)$
-* 空间复杂度：使用 `charAt` 替换 `toCharArray` 的话为 $O(C + \log{C})$，$C$ 为常数，固定为 $128 * 2$；否则为 $O(n + C + \log{C})$
+* 时间复杂度：令字符集的大小为 $C$。复杂度为 $O(\max(n, C\log{C}))$
+* 空间复杂度：$O(n + C + \log{C})$
 
 ---
 
